--- a/index.html
+++ b/index.html
@@ -8,32 +8,31 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1 class="text-blue-500"><strong><em>Hi! This is my first homework assignment for Introduction to Software Development.</em></strong></h1>
+    <h1 class="text-blue-500 font-bold border-8 rounded-xl pb-5"><strong><em>Hi! This is my first homework assignment for Introduction to Software Development.</em></strong></h1>
     
-    
-    <p>Don't you love it?</p>
-    <p>Here is a beautiful logo of my startup, Pyaari Weddings:</p>
-<div><img src="logo.png"></div>
+    <p class="text-red-500 text-xs pb-5">Don't you love it?</p>
+    <p class="text-purple-500 text-center">Here is a beautiful logo of my startup, Pyaari Weddings:</p>
+<div class="w-full m-10"><img src="logo.png"></div>
 
-    <ul>
-    <li><a href="About us.html">This is the About us page</a></li>
-    <li><a href="Home Page.html">This is the Home page</a></li>
+    <ul class="xl:flex">
+    <li class="xl:w-1/3 text-yellow-100 underline border-4 rounded-full m-4"><a href="About us.html">This is the About us page</a></li>
+    <li class="xl:w-1/2 text-red-200 capitalize border-4 rounded-md m-4 underline"><a href="Home Page.html">This is the Home page</a></li>
 </ul>
 <table> 
  <tr> 
- <th>Co-Founder/CFO</th> 
- <th>Co-Founder/CMO</th> 
+ <th class="text-blue-300 pr-5">Co-Founder/CFO</th> 
+ <th class="text-blue-100">Co-Founder/CMO</th> 
  </tr> 
  <tr> 
- <td>Raj</td> 
- <td>Manali</td> 
+ <td class="text-blue-400 pt-5">Raj</td> 
+ <td class="text-blue-500 pt-5">Manali</td> 
  </tr> 
  <tr> 
- <td>Kamaria</td> 
- <td>Kamaria</td> 
+ <td class="text-red-200 pl-5">Kamaria</td> 
+ <td class="text-red-600 pl-5">Kamaria</td> 
  </tr> 
 </table>
-<p><span>And that is it!</span></p>
+<p><span class="text-green-500 pl-10">And that is it!</span></p>
 <hr>
 </body>
 </html>
