--- a/About us.html
+++ b/About us.html
@@ -14,11 +14,11 @@
     <li class="pt-5">But contact us down below!</li>
     </ol>
 <ol>
-<form action="https://www.maps.google.com/" class="pt-10">
-    <li class="pb-5"><label for="name">What is your dream city?</label></li>
+<form action="Submit.html" class="pt-10">
+    <li class="pb-5"><label for="name">What's your favorite fast food restaurant?</label></li>
     <input type="text" id="name" name="name" class="border-8 rounded-md">
     
-    <li><label for="favorite-color">What is your favorite color?</label></li>
+    <li><label for="favorite-color">And which item do you get?</label></li>
     <input type="text" id="favorite-color" name="favoriteColor" class="border-4 rounded-full">
     <li class="pt-2 text-blue-500 underline"><button>Submit form!</button></li>
 </form>
